# dmon-app

./: .gitignore  .gitlab-ci.yml  .pylintrc  Procfile  README.md  build.sh  cypress.config.js  manage.py  package-lock.json  package.json  pylama.ini  pyproject.toml  render.yaml  requirements.txt  ruff.toml  testdb.json
.gitlab/: cypress_before_install.sh  django_before_install.sh
cypress/e2e/: test.cy.js
cypress/fixtures/: testdb.json
cypress/integration/: test.js
cypress/support/: commands.js
django_project/: settings.py  urls.py
polls/: admin.py  apps.py  mixins.py  models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py  0002_choice_answered_choice_question_answered_by_and_more.py
polls/templates/polls/: choice_form.html  create_polls.html  details.html  question_detail.html  question_form.html  question_list.html  results.html
templates/: navbar.html
templates/polls/: create_choice.html  index.html
templates/registration/: signup.html
user_profile/: admin.py  apps.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
user_profile/migrations/: 0001_initial.py  0002_remove_userprofile_name_alter_userprofile_age_and_more.py  0003_userprofile_is_student_userprofile_is_teacher.py  0004_alter_userprofile_is_student.py
users/: admin.py  decorators.py  forms.py  mixins.py  models.py  signals.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_customuser_is_student_and_more.py
users/templates/: base_generic.html  generic_delete_confirm_form.html  navbar.html
(+5 files in other folders)
