[tool.poetry]
name = "polls-app"
version = "0.1.0"
description = "Polls app"
authors = ["Seshagiri Prabhu <seshagiri.narasimha1@louisiana.edu>"]
readme = "README.md"
packages = [{include = "polls_app"}]

[tool.poetry.dependencies]
python = "3.10.6"
django = "^4.1.5"
whitenoise = {extras = ["brotli"], version = "^6.3.0"}
django-bootstrap5 = "^22.2"
fontawesomefree = "^6.2.1"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
